fetch(query, entity, struct): 필드 수정 및 쿼리 if 기능 추가
